<resources>
    <string name="app_name">TeamMangaerV2</string>
    <string name="calendar">Calendario</string>
    <string name="controller_code">Controller</string>
    <string name="confirmed">Confirmados</string>
    <string name="error_login">Error de login.</string>
    <string name="error_signin">Error de signin.</string>
    <string name="join">Acudo</string>
    <string name="leave">Falto</string>
    <string name="login">Log in</string>
    <string name="log_out">Salir</string>
    <string name="next_match">Prox. Part.</string>
    <string name="next_rival">Prox. Rival.</string>
    <string name="nom_usr">Nombre usuario</string>
    <string name="pass">Password</string>
    <string name="player">Jugador</string>
    <string name="phone">Phone</string>
    <string name="pos">Position</string>
    <string name="rating">Valoración</string>
    <string name="signin">Sign in</string>
    <string name="team">Equipo</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="position">Posición</string>
    <string name="dorsal">Dorsal</string>
    <string name="goles">Goles</string>
    <string name="asists">Asistencias</string>
    <string name="expulsions">Expulsiones</string>
    <string name="played">Jugados</string>
    <string name="change_pic">Cambiar Foto</string>
    <string name="save">Guardar</string>
    <string name="search_team">Buscar Equipo</string>
    <string name="create_team">Crear equipo</string>
    <string name="quit">Abandonar</string>
    <string name="open_calendar">Abrir Calendario</string>
    <string name="create_event">Crear Evento</string>
    <string name="create_match">Crear Partido</string>
    <string name="result">Resultado</string>
    <string name="date">Fecha</string>
    <string name="abandonar">Abandonar</string>
    <string name="borrar">Borrar</string>

</resources>
