<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/myRegularGrey"
    android:columnCount="2"
    android:rowCount="8"
    android:layout_gravity="start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreUsuario"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/textView6" />
    <TextView
        android:layout_row="0"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tNombre"
        android:layout_gravity="bottom|end" />


    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:id="@+id/textView4" />
    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_equipo"
        android:layout_gravity="bottom|end"/>


    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:id="@+id/textView11" />
    <TextView
        android:layout_row="2"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pos"
        android:layout_gravity="bottom|end"/>


    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dorsal"
        android:id="@+id/textView9" />
    <TextView
        android:layout_row="3"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tDorsal"
        android:layout_gravity="bottom|end"/>



    <TextView
        android:layout_row="4"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goles"
        android:id="@+id/textView13" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_goles"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="bottom|end"/>


    <TextView
        android:layout_row="5"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asists"
        android:id="@+id/textView18" />
    <TextView
        android:layout_row="5"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_asistencias"
        android:layout_gravity="bottom|end"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expulsions"
        android:id="@+id/textView15"
        android:layout_row="6"
        android:layout_column="0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_expulsiones"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="bottom|end"/>


    <TextView
        android:layout_row="7"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played"
        android:id="@+id/textView17" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_jugados"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_gravity="bottom|end"/>

</GridLayout>