<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.segarra.lucas.teammanagerv2.View.EventsFragment"
    android:background="@color/myPurpleGrey">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_calendar"
        android:id="@+id/b_abr_cal"
        android:onClick="showCalendar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:id="@+id/bCrearEvento"
        android:onClick="addEvent"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_match"
        android:onClick="addMatch"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rv_next_matches"
            android:layout_gravity="bottom"
            android:scrollbars="vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/include" />

        <include layout="@layout/match_details_layout"
            android:id="@+id/include"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
